@@ -5,3 +5,5 @@ Lwt_sequence
 Lwt_monitor
 Lwt_mvar
 Lwt_mutex
+Lwt_event
+Lwt_signal
