@@ -325,5 +325,3 @@ val sleep_queue_size : unit -> int
 
 val run : 'a Lwt.t -> 'a
   (* Same as {!Lwt_main.run} *)
-
-val child_exited : unit React.event
